Change subtype to voice

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,12 @@ android {
     buildFeatures {
         buildConfig = true
     }
-
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
+        resources {
+            excludes += ['META-INF/DEPENDENCIES']
+        }
     }
+
 }
 
 dependencies {
