--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ plugins {
     alias(libs.plugins.android.application)
 
     // Add the Google services Gradle plugin
-    id 'com.google.gms.google-services'
-    id 'com.google.firebase.crashlytics'
+//    id 'com.google.gms.google-services'
+//    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -60,4 +60,5 @@ dependencies {
     // Import the Firebase BoM
     implementation platform(libs.firebase.bom)
     implementation libs.firebase.crashlytics
+    implementation libs.okhttp
 }
