--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,26 +27,22 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: Build app bundle release (AAB) - ${{ env.main_project_module }} module
-      run: ./gradlew ${{ env.main_project_module }}:bundleRelease
-    # Upload Artifact Build
-    # Noted For Output [main_project_module]/build/outputs/apk/debug/
-    - name: Upload APK Debug - ${{ env.repository_name }}
-      uses: actions/upload-artifact@v4
+    - uses: r0adkll/sign-android-release@v1
+      name: Sign app APK
+      # ID used to access action output
+      id: sign_app
       with:
-        name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) debug generated
-        path: ${{ env.main_project_module }}/build/outputs/apk/debug/
-
-    # Noted For Output [main_project_module]/build/outputs/apk/release/
-    - name: Upload APK Release - ${{ env.repository_name }}
-      uses: actions/upload-artifact@v4
+        releaseDirectory: app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+      env:
+        # override default build-tools version (33.0.0) -- optional
+        BUILD_TOOLS_VERSION: "34.0.0"
+  
+    # Example use of `signedReleaseFile` output -- not needed
+    - uses: actions/upload-artifact@v4
       with:
-        name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) release generated
-        path: ${{ env.main_project_module }}/build/outputs/apk/release/
-
-    # Noted For Output [main_project_module]/build/outputs/bundle/release/
-    - name: Upload AAB (App Bundle) Release - ${{ env.repository_name }}
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - App bundle(s) AAB release generated
-        path: ${{ env.main_project_module }}/build/outputs/bundle/release/
+        name: Signed app bundle
+        path: ${{steps.sign_app.outputs.signedReleaseFile}}
